# sscp-host

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
examples/sscp-test/: main.c
examples/sscp-tool/: main.c
inc/: sscp-consts.h  sscp-errors.h  sscp-host.h
src/: sscp-host-crypto-aes.c  sscp-host-crypto-hmac.c  sscp-host-crypto-prng.c  sscp-host-crypto-sha256.c  sscp-host-crypto.c  sscp-host-crypto_i.h  sscp-host-exchange.c  sscp-host-functions.c  sscp-host-guard.c  sscp-host-serial-linux.c  sscp-host-serial-windows.c  sscp-host-serial_i.h  sscp-host_i.h
